Finished the leave-one-out method of the KNNRecommender. evaluate() method for the EnsembleQuantifier finished.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -23,7 +23,7 @@
     "from knn_recommender import KNNRecommender\n",
     "\n",
     "recommender = KNNRecommender(supervised=True, _load=False)\n",
-    "recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
+    "recommender.fit(complete_data_path=\"./data/datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
     "recommender.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
     "recommender.persist_model(\"./recommender_data/KNNRecommender.joblib\")"
    ]
@@ -37,21 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 1: DyS with Weight: 0.0912292699822285\n",
-      "Top 2: SORD with Weight: 0.09121615578024786\n",
-      "Top 3: MS with Weight: 0.09118933512419261\n",
-      "Full ranking: ('DyS', 'SORD', 'MS', 'SMM', 'MAX', 'X', 'ACC', 'HDy', 'CC', 'PACC', 'PCC')\n",
-      "Sum of weights: 0.9999999999999998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from knn_recommender import KNNRecommender\n",
     "import pandas as pd\n",
@@ -98,7 +86,7 @@
     "from regression_recommender import RegressionRecommender\n",
     "\n",
     "recommender = RegressionRecommender(supervised=True, _load=False)\n",
-    "recommender.fit(complete_data_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
+    "recommender.fit(complete_data_path=\"./data/datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
     "recommender.save_meta_table(\"./recommender_data/regression_meta_table.h5\")\n",
     "recommender.persist_model(\"./recommender_data/RegressionRecommender.joblib\")"
    ]
@@ -112,21 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 1: SORD with Weight: 0.1556898116026983\n",
-      "Top 2: X with Weight: 0.13255208404701815\n",
-      "Top 3: SMM with Weight: 0.13152383834692327\n",
-      "Full ranking: ('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC')\n",
-      "Sum of weights: 1.0000000000000002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from regression_recommender import RegressionRecommender\n",
     "import pandas as pd\n",
@@ -169,27 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EnsembleQuantifier(ranking=('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC'), weights=[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], method=median)\n",
-      "True prevalence: 0.7630769230769231\n",
-      "Predicted prevalence: 0.76\n",
-      "\n",
-      "EnsembleQuantifier(ranking=('SORD', 'X', 'SMM', 'MAX', 'DyS', 'HDy', 'ACC', 'PACC', 'CC', 'MS', 'PCC'), weights=(np.float64(0.1556898116026983), np.float64(0.13255208404701818), np.float64(0.13152383834692327), np.float64(0.11591094835805989), np.float64(0.11428853307711338), np.float64(0.10866110751828068), np.float64(0.06366978915726007), np.float64(0.048393397778182495), np.float64(0.046386796342616186), np.float64(0.044602061300045154), np.float64(0.03832163247180237)), method=weighted)\n",
-      "True prevalence: 0.7630769230769231\n",
-      "Predicted prevalence: 0.7606429310527548\n",
-      "\n",
-      "EnsembleQuantifier(ranking=('DyS', 'ACC', 'CC'), weights=(np.float64(0.5094317799381599), np.float64(0.2838028728287671), np.float64(0.20676534723307297)), method=weighted)\n",
-      "True prevalence: 0.7630769230769231\n",
-      "Predicted prevalence: 0.76059832484683\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from regression_recommender import RegressionRecommender\n",
     "from ensemble_quantifier import EnsembleQuantifier\n",
@@ -278,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +248,33 @@
     "# it predicts the ranking of the excluded instance and appends the\n",
     "# predicted ranking alongside the true ranking to the recommender evaluation table.\n",
     "recommender = RegressionRecommender()\n",
-    "recommender_eval, quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/regression_recommender_evaluation_table.csv\",\n",
-    "                                                                          \"./plot_data/regression_recommender_quantifiers_evaluation_table.csv\")"
+    "reg_recommender_eval, reg_quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/reg_recommender_evaluation_table.csv\",\n",
+    "                                                                                  \"./plot_data/reg_quantifiers_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate KNNRecommender with Leave-One-Out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from knn_recommender import KNNRecommender\n",
+    "\n",
+    "# There is a built-in method to evaluate the KNNRecommender\n",
+    "# using the leave-one-out strategy. It excludes one instance from the\n",
+    "# meta-table and uses the remaining instances to fit the model. Then,\n",
+    "# it predicts the ranking of the excluded instance and appends the\n",
+    "# predicted ranking alongside the true ranking to the recommender evaluation table.\n",
+    "recommender = KNNRecommender()\n",
+    "knn_recommender_eval, knn_quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/knn_recommender_evaluation_table.csv\",\n",
+    "                                                                                  \"./plot_data/knn_quantifiers_evaluation_table.csv\")"
    ]
   },
   {
@@ -305,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,63 +326,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Top-1</td>\n",
+       "      <td>(KNN)Top-1</td>\n",
        "      <td>AedesQuinx</td>\n",
        "      <td>100</td>\n",
        "      <td>623</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.123091</td>\n",
+       "      <td>0.027899</td>\n",
+       "      <td>0.027899</td>\n",
+       "      <td>0.089123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Top-1</td>\n",
+       "      <td>(KNN)Top-1</td>\n",
        "      <td>AedesQuinx</td>\n",
        "      <td>100</td>\n",
        "      <td>243</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.116522</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.086036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Top-1</td>\n",
+       "      <td>(KNN)Top-1</td>\n",
        "      <td>AedesQuinx</td>\n",
        "      <td>100</td>\n",
        "      <td>18</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.133319</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.058812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Top-1</td>\n",
+       "      <td>(KNN)Top-1</td>\n",
        "      <td>AedesQuinx</td>\n",
        "      <td>100</td>\n",
        "      <td>549</td>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.126153</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.118384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Top-1</td>\n",
+       "      <td>(KNN)Top-1</td>\n",
        "      <td>AedesQuinx</td>\n",
        "      <td>100</td>\n",
        "      <td>447</td>\n",
        "      <td>5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.126957</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.095243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -415,63 +398,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26395</th>\n",
-       "      <td>Top-9+W</td>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
        "      <td>click-prediction</td>\n",
        "      <td>100</td>\n",
        "      <td>554</td>\n",
        "      <td>6</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.989238</td>\n",
-       "      <td>0.010762</td>\n",
-       "      <td>1.902615</td>\n",
+       "      <td>0.982121</td>\n",
+       "      <td>0.017879</td>\n",
+       "      <td>2.005292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26396</th>\n",
-       "      <td>Top-9+W</td>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
        "      <td>click-prediction</td>\n",
        "      <td>100</td>\n",
        "      <td>379</td>\n",
        "      <td>7</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.930627</td>\n",
-       "      <td>0.069373</td>\n",
-       "      <td>1.905128</td>\n",
+       "      <td>0.928380</td>\n",
+       "      <td>0.071620</td>\n",
+       "      <td>2.187056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26397</th>\n",
-       "      <td>Top-9+W</td>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
        "      <td>click-prediction</td>\n",
        "      <td>100</td>\n",
        "      <td>348</td>\n",
        "      <td>8</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.989628</td>\n",
-       "      <td>0.010372</td>\n",
-       "      <td>1.911327</td>\n",
+       "      <td>0.982769</td>\n",
+       "      <td>0.017231</td>\n",
+       "      <td>2.172593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26398</th>\n",
-       "      <td>Top-9+W</td>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
        "      <td>click-prediction</td>\n",
        "      <td>100</td>\n",
        "      <td>840</td>\n",
        "      <td>9</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.975554</td>\n",
-       "      <td>0.024446</td>\n",
-       "      <td>1.911165</td>\n",
+       "      <td>0.970281</td>\n",
+       "      <td>0.029719</td>\n",
+       "      <td>2.167121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26399</th>\n",
-       "      <td>Top-9+W</td>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
        "      <td>click-prediction</td>\n",
        "      <td>100</td>\n",
        "      <td>114</td>\n",
        "      <td>10</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.975445</td>\n",
-       "      <td>0.024555</td>\n",
-       "      <td>1.898517</td>\n",
+       "      <td>0.967289</td>\n",
+       "      <td>0.032711</td>\n",
+       "      <td>2.069276</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -479,36 +462,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      quantifier           dataset  sample_size  sampling_seed  iteration  \\\n",
-       "0          Top-1        AedesQuinx          100            623          1   \n",
-       "1          Top-1        AedesQuinx          100            243          2   \n",
-       "2          Top-1        AedesQuinx          100             18          3   \n",
-       "3          Top-1        AedesQuinx          100            549          4   \n",
-       "4          Top-1        AedesQuinx          100            447          5   \n",
-       "...          ...               ...          ...            ...        ...   \n",
-       "26395    Top-9+W  click-prediction          100            554          6   \n",
-       "26396    Top-9+W  click-prediction          100            379          7   \n",
-       "26397    Top-9+W  click-prediction          100            348          8   \n",
-       "26398    Top-9+W  click-prediction          100            840          9   \n",
-       "26399    Top-9+W  click-prediction          100            114         10   \n",
+       "         quantifier           dataset  sample_size  sampling_seed  iteration  \\\n",
+       "0        (KNN)Top-1        AedesQuinx          100            623          1   \n",
+       "1        (KNN)Top-1        AedesQuinx          100            243          2   \n",
+       "2        (KNN)Top-1        AedesQuinx          100             18          3   \n",
+       "3        (KNN)Top-1        AedesQuinx          100            549          4   \n",
+       "4        (KNN)Top-1        AedesQuinx          100            447          5   \n",
+       "...             ...               ...          ...            ...        ...   \n",
+       "26395  (KNN)Top-9+W  click-prediction          100            554          6   \n",
+       "26396  (KNN)Top-9+W  click-prediction          100            379          7   \n",
+       "26397  (KNN)Top-9+W  click-prediction          100            348          8   \n",
+       "26398  (KNN)Top-9+W  click-prediction          100            840          9   \n",
+       "26399  (KNN)Top-9+W  click-prediction          100            114         10   \n",
        "\n",
        "       alpha  pred_prev  abs_error  run_time  \n",
-       "0        0.0   0.000000   0.000000  0.123091  \n",
-       "1        0.0   0.000000   0.000000  0.116522  \n",
-       "2        0.0   0.000000   0.000000  0.133319  \n",
-       "3        0.0   0.000000   0.000000  0.126153  \n",
-       "4        0.0   0.000000   0.000000  0.126957  \n",
+       "0        0.0   0.027899   0.027899  0.089123  \n",
+       "1        0.0   0.000045   0.000045  0.086036  \n",
+       "2        0.0   0.000045   0.000045  0.058812  \n",
+       "3        0.0   0.000045   0.000045  0.118384  \n",
+       "4        0.0   0.000045   0.000045  0.095243  \n",
        "...      ...        ...        ...       ...  \n",
-       "26395    1.0   0.989238   0.010762  1.902615  \n",
-       "26396    1.0   0.930627   0.069373  1.905128  \n",
-       "26397    1.0   0.989628   0.010372  1.911327  \n",
-       "26398    1.0   0.975554   0.024446  1.911165  \n",
-       "26399    1.0   0.975445   0.024555  1.898517  \n",
+       "26395    1.0   0.982121   0.017879  2.005292  \n",
+       "26396    1.0   0.928380   0.071620  2.187056  \n",
+       "26397    1.0   0.982769   0.017231  2.172593  \n",
+       "26398    1.0   0.970281   0.029719  2.167121  \n",
+       "26399    1.0   0.967289   0.032711  2.069276  \n",
        "\n",
        "[26400 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +502,8 @@
     "# We need the recommender evaluation table and the quantifiers evaluation table\n",
     "# generated with the leave_one_out_evaluation method from the RegressionRecommender.\n",
     "ensemble_qtf = EnsembleQuantifier()\n",
-    "ensemble_qtf.evaluation(recommender_eval, quantifiers_eval, \"./plot_data/ensemble_quantifier_evaluation_table.csv\")"
+    "ensemble_qtf.evaluation(\"regression\", reg_recommender_eval, reg_quantifiers_eval, \"./plot_data/reg_ensemble_quantifier_evaluation_table.csv\")\n",
+    "ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, \"./plot_data/knn_ensemble_quantifier_evaluation_table.csv\")"
    ]
   }
  ],
