Changing how the quantifiers evaluation is rounded in the QuantifierEvaluator. This affects Recommender performance.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -23,7 +23,9 @@
     "from knn_recommender import KNNRecommender\n",
     "\n",
     "recommender = KNNRecommender(supervised=True, _load=False)\n",
+    "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
+    "# recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "recommender.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
     "recommender.persist_model(\"./recommender_data/KNNRecommender.joblib\")"
    ]
@@ -86,7 +88,9 @@
     "from regression_recommender import RegressionRecommender\n",
     "\n",
     "recommender = RegressionRecommender(supervised=True, _load=False)\n",
+    "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
+    "# recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "recommender.save_meta_table(\"./recommender_data/regression_meta_table.h5\")\n",
     "recommender.persist_model(\"./recommender_data/RegressionRecommender.joblib\")"
    ]
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,214 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>quantifier</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>sample_size</th>\n",
-       "      <th>sampling_seed</th>\n",
-       "      <th>iteration</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>pred_prev</th>\n",
-       "      <th>abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>623</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.062761</td>\n",
-       "      <td>0.062761</td>\n",
-       "      <td>0.058607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>243</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.037312</td>\n",
-       "      <td>0.037312</td>\n",
-       "      <td>0.046871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.105745</td>\n",
-       "      <td>0.105745</td>\n",
-       "      <td>0.047145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>549</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.047411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>447</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.055759</td>\n",
-       "      <td>0.055759</td>\n",
-       "      <td>0.047556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439995</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>554</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.999354</td>\n",
-       "      <td>0.000646</td>\n",
-       "      <td>0.414155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439996</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>379</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.999423</td>\n",
-       "      <td>0.000577</td>\n",
-       "      <td>0.406802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439997</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>348</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.998598</td>\n",
-       "      <td>0.001402</td>\n",
-       "      <td>0.409476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439998</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>840</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.994564</td>\n",
-       "      <td>0.005436</td>\n",
-       "      <td>0.410907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439999</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>114</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.990425</td>\n",
-       "      <td>0.009575</td>\n",
-       "      <td>0.408590</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>440000 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          quantifier            dataset  sample_size  sampling_seed  \\\n",
-       "0         (KNN)Top-1  1043_ada_agnostic          100            623   \n",
-       "1         (KNN)Top-1  1043_ada_agnostic          100            243   \n",
-       "2         (KNN)Top-1  1043_ada_agnostic          100             18   \n",
-       "3         (KNN)Top-1  1043_ada_agnostic          100            549   \n",
-       "4         (KNN)Top-1  1043_ada_agnostic          100            447   \n",
-       "...              ...                ...          ...            ...   \n",
-       "439995  (KNN)Top-9+W           winetype          100            554   \n",
-       "439996  (KNN)Top-9+W           winetype          100            379   \n",
-       "439997  (KNN)Top-9+W           winetype          100            348   \n",
-       "439998  (KNN)Top-9+W           winetype          100            840   \n",
-       "439999  (KNN)Top-9+W           winetype          100            114   \n",
-       "\n",
-       "        iteration  alpha  pred_prev  abs_error  run_time  \n",
-       "0               1    0.0   0.062761   0.062761  0.058607  \n",
-       "1               2    0.0   0.037312   0.037312  0.046871  \n",
-       "2               3    0.0   0.105745   0.105745  0.047145  \n",
-       "3               4    0.0   0.000045   0.000045  0.047411  \n",
-       "4               5    0.0   0.055759   0.055759  0.047556  \n",
-       "...           ...    ...        ...        ...       ...  \n",
-       "439995          6    1.0   0.999354   0.000646  0.414155  \n",
-       "439996          7    1.0   0.999423   0.000577  0.406802  \n",
-       "439997          8    1.0   0.998598   0.001402  0.409476  \n",
-       "439998          9    1.0   0.994564   0.005436  0.410907  \n",
-       "439999         10    1.0   0.990425   0.009575  0.408590  \n",
-       "\n",
-       "[440000 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
