--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,30 +39,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import make_classification\n",
+    "\n",
+    "# Generate a binary classification dataset\n",
+    "X, y = make_classification(n_samples=100000, n_features=50, n_classes=2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from knn_recommender import KNNRecommender\n",
-    "# import pandas as pd\n",
+    "from knn_recommender import KNNRecommender\n",
+    "import pandas as pd\n",
     "\n",
-    "# # When a KNNRecommender model is instantiated, it automatically loads\n",
-    "# # the fitted model persisted on the previous step (with _load=True by default).\n",
-    "# recommender = KNNRecommender()\n",
+    "# When a KNNRecommender model is instantiated, it automatically loads\n",
+    "# the fitted model persisted on the previous step (with _load=True by default).\n",
+    "recommender = KNNRecommender()\n",
     "\n",
     "# df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
     "# X = df.drop(columns=[\"class\"]).values\n",
     "# y = df[\"class\"].values\n",
     "\n",
-    "# # Returns two tuples: (quantifiers ranking), (quantifiers weight by their ARR).\n",
-    "# # First quantifier is best, second quantifier is second best, and so on.\n",
-    "# ranking, weights = recommender.recommend(X, y)\n",
+    "# Returns two tuples: (quantifiers ranking), (quantifiers weight by their ARR).\n",
+    "# First quantifier is best, second quantifier is second best, and so on.\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
     "\n",
-    "# print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
-    "# print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
-    "# print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
-    "# print(f\"Full ranking: {ranking}\")\n",
-    "# print(f\"Sum of weights: {sum(weights)}\")"
+    "print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
+    "print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
+    "print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
+    "print(f\"Full ranking: {ranking}\")\n",
+    "print(f\"Weights: {weights}\")"
    ]
   },
   {
@@ -81,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,9 +304,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantifier</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>sample_size</th>\n",
+       "      <th>sampling_seed</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>pred_prev</th>\n",
+       "      <th>abs_error</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>623</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.061650</td>\n",
+       "      <td>0.061650</td>\n",
+       "      <td>0.058840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>243</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037188</td>\n",
+       "      <td>0.037188</td>\n",
+       "      <td>0.047052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.104647</td>\n",
+       "      <td>0.104647</td>\n",
+       "      <td>0.046842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>549</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.047015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>447</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.055687</td>\n",
+       "      <td>0.055687</td>\n",
+       "      <td>0.047509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439995</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>554</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999366</td>\n",
+       "      <td>0.000634</td>\n",
+       "      <td>0.406421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439996</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>379</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999436</td>\n",
+       "      <td>0.000564</td>\n",
+       "      <td>0.404943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439997</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>348</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.998610</td>\n",
+       "      <td>0.001390</td>\n",
+       "      <td>0.404237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439998</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>840</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.994586</td>\n",
+       "      <td>0.005414</td>\n",
+       "      <td>0.402591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439999</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>114</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.990503</td>\n",
+       "      <td>0.009497</td>\n",
+       "      <td>0.403762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>440000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          quantifier            dataset  sample_size  sampling_seed  \\\n",
+       "0         (KNN)Top-1  1043_ada_agnostic          100            623   \n",
+       "1         (KNN)Top-1  1043_ada_agnostic          100            243   \n",
+       "2         (KNN)Top-1  1043_ada_agnostic          100             18   \n",
+       "3         (KNN)Top-1  1043_ada_agnostic          100            549   \n",
+       "4         (KNN)Top-1  1043_ada_agnostic          100            447   \n",
+       "...              ...                ...          ...            ...   \n",
+       "439995  (KNN)Top-9+W           winetype          100            554   \n",
+       "439996  (KNN)Top-9+W           winetype          100            379   \n",
+       "439997  (KNN)Top-9+W           winetype          100            348   \n",
+       "439998  (KNN)Top-9+W           winetype          100            840   \n",
+       "439999  (KNN)Top-9+W           winetype          100            114   \n",
+       "\n",
+       "        iteration  alpha  pred_prev  abs_error  run_time  \n",
+       "0               1    0.0   0.061650   0.061650  0.058840  \n",
+       "1               2    0.0   0.037188   0.037188  0.047052  \n",
+       "2               3    0.0   0.104647   0.104647  0.046842  \n",
+       "3               4    0.0   0.000045   0.000045  0.047015  \n",
+       "4               5    0.0   0.055687   0.055687  0.047509  \n",
+       "...           ...    ...        ...        ...       ...  \n",
+       "439995          6    1.0   0.999366   0.000634  0.406421  \n",
+       "439996          7    1.0   0.999436   0.000564  0.404943  \n",
+       "439997          8    1.0   0.998610   0.001390  0.404237  \n",
+       "439998          9    1.0   0.994586   0.005414  0.402591  \n",
+       "439999         10    1.0   0.990503   0.009497  0.403762  \n",
+       "\n",
+       "[440000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
