Now all the Recommenders work with a Pipeline, this means that all of the training/testing data pre-processing is ecapsulated within the model. You can just load a dataset and use recommender.fit() and predict() (pre-processing is invisible).

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,6 +520,55 @@
     "ensemble_qtf = EnsembleQuantifier()\n",
     "ensemble_qtf.evaluation(\"regression\", reg_recommender_eval, reg_quantifiers_eval, \"./plot_data/reg_ensemble_quantifier_evaluation_table.csv\")\n",
     "ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, \"./plot_data/knn_ensemble_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[1;32mc:\\users\\coenl\\appdata\\local\\temp\\ipykernel_1168\\3359174058.py\u001b[0m(11)\u001b[0;36mvariance_threshold\u001b[1;34m()\u001b[0m\n",
+      "\n",
+      "array([  0,   1,   2,   3,   4,   5,   6,  10,  11,  12,  13,  14,  15,\n",
+      "        16,  17,  18,  19,  20,  21,  23,  24,  25,  26,  27,  28,  29,\n",
+      "        30,  31,  32,  33,  34,  35,  36,  37,  38,  39,  40,  41,  42,\n",
+      "        44,  46,  47,  48,  49,  58,  59,  60,  61,  62,  63,  64,  65,\n",
+      "        66,  67,  68,  69,  70,  73,  75,  76,  77,  78,  79,  81,  82,\n",
+      "        84,  85,  92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102,\n",
+      "       103, 106, 107, 109, 110])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from regression_recommender import RegressionRecommender\n",
+    "from knn_recommender import KNNRecommender\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "import pandas as pd\n",
+    "\n",
+    "def variance_threshold(X: pd.DataFrame):\n",
+    "    selector = VarianceThreshold()\n",
+    "    _ = selector.fit_transform(X)\n",
+    "    support = selector.get_support(indices=True)\n",
+    "    import pdb; pdb.set_trace()\n",
+    "    reduced_df = X.iloc[:, support]\n",
+    "    return reduced_df\n",
+    "\n",
+    "knn = KNNRecommender()\n",
+    "reg = RegressionRecommender()\n",
+    "\n",
+    "mte = knn.meta_features_table\n",
+    "umte = knn._unscaled_meta_features_table\n",
+    "\n",
+    "mte = variance_threshold(mte)\n",
+    "umte = umte[mte.columns]\n",
+    "\n",
+    "# knn.meta_features_table = variance_threshold(knn.meta_features_table)\n",
+    "\n",
+    "# knn._unscaled_meta_features_table = knn._unscaled_meta_features_table[knn.meta_features_table.columns]"
    ]
   }
  ],
